# R-203Qualit-

./: CMakeLists.txt  README.md
Tp1/: toto.txt
Tp2/: Ex01.cpp  exos_git.txt
Tp3/: Shop.cpp  Tp3.1.md  Tp3.2.md  shape.cpp
Tp4/: EX-02.cpp  Hello-World.cpp
Tp5/: CaesarCypher.cpp  SumNumber.cpp  Tp5.md
Tp6/: README.md  kataTDD.cpp  kataTDD_test.cpp
Tp7/: Conflict.md
